# mandelbrot

./: Cargo.toml
src/: colorschemes.rs  main.rs
